Add BD: chrpath.
Set base MPI packages to noarch on SUSE.

Skip-PR-comments: true
PR-repos-ubuntu20: spdk@PR-58:lastBuild raft@PR-66 mpich@PR-64:lastBuild hdf5@PR-38:lastBuild ior@PR-10:lastBuild daos@PR-11205:73

Required-githooks: true

Signed-off-by: Brian J. Murrell <brian.murrell@intel.com>

--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,8 @@ Uploaders: Brian J. Murrell <brian.murrell@intel.com>
 Section: devel
 Priority: optional
 Build-Depends: debhelper-compat (= 12),
-               libmpich-dev
+               libmpich-dev,
+               chrpath
 Standards-Version: 4.4.1.0
 Vcs-Browser: https://github.com/LLNL/lwgrp
 Vcs-Git: https://github.com/LLNL/lwgrp.git
